add file grouping in folders

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Starter</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/src/css/style.css" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             </div>
             <article class="review">
                 <div class="img-container">
-                    <img src="./IMG-20230114-WA0000 (2).jpg" id="person-img" alt="">
+                    <img src="/images/IMG-20230114-WA0000 (2).jpg" id="person-img" alt="">
                 </div>
                 <h4 id="author">Maurice</h4>
                 <p id="job">ux designer</p>
@@ -48,5 +48,5 @@
     </main>
 
 
-    <script src="app.js"></script>
+    <script src="/src/app.js"></script>
 </body>
